<resources>
    <string name="app_name">Luz &amp; Água</string>

    <!-- Menu Head -->
    <string name="navigation_drawer_open">Abrir Gaveta de Navegação</string>
    <string name="navigation_drawer_close">Fechar Gaveta de Navegação</string>
    <string name="nav_header_title">Luz &amp; Água</string>
    <string name="nav_header_subtitle">Trabalho de Engenharia de Software 2</string>
    <string name="nav_header_desc">Ícone</string>
    <string name="action_settings">Configurações</string>

    <!-- Menu -->
    <string name="relatorio">Relatório</string>
    <string name="contas">Contas</string>
    <string name="registrar_conta">Registrar Conta</string>
    <string name="exibir_contas">Exibir Contas</string>
    <string name="titulares">Titulares</string>
    <string name="sign_out">Sair</string>

    <string name="welcome">Bem vindo(a)!</string>
    <string name="no_internet_connection">Sem conexão</string>

    <!-- Bill Register -->
    <string name="tipo_conta">Tipo Conta</string>
    <string name="tipo_pessoa">Pessoa</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>

    <!-- Bill Show -->
    <string name="data_conta">Data Conta</string>
    <string name="consumo">Consumo</string>
    <string name="listar_por">Listar por</string>
    <string name="titular">Titular</string>
    <string name="data">Data</string>
    <string name="nome_titular">Nome</string>
    <string name="razao_social">Razão Social</string>
    <string name="consumo_anterior">Consumo Anterior</string>
    <string name="conta">Conta</string>
    <string name="consumo_total">Consumo Total</string>
    <string name="valor_total">Valor Total</string>

    <!-- Spinners -->
    <string-array name="spinner_tipo_conta">
        <item>Água</item>
        <item>Luz</item>
    </string-array>

    <string-array name="spinner_tipo_conta_exibir">
        <item>Água</item>
        <item>Luz</item>
        <item>Ambos</item>
    </string-array>

    <string-array name="spinner_tipo_pessoa">
        <item>Física</item>
        <item>Jurídica</item>
    </string-array>

    <string-array name="spinner_listar_por_exibir">
        <item>Ordem Alfabética</item>
        <item>Data</item>
    </string-array>
</resources>
