<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/titulares"
            android:icon="@drawable/ic_menu_titular"
            android:title="@string/titulares" />
        <item
            android:id="@+id/contas"
            android:icon="@drawable/ic_menu_contas"
            android:title="@string/contas">
            <menu>
                <group android:id="@+id/crud_conta" android:checkableBehavior="single">
                <item android:id="@+id/criar_conta" android:title="@string/registrar_conta" />
                <item android:id="@+id/exibir_contas" android:title="@string/exibir_contas" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/relatorio"
            android:icon="@drawable/ic_menu_relatorio"
            android:title="@string/relatorio" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />
    </group>

</menu>
