<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:id="@+id/imageViewReport"
                android:src="@drawable/ic_menu_contas"
                android:contentDescription="@string/relatorio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/conta_report_EditText"
                android:text="@string/tipo_conta"
                android:layout_marginStart="5dp"
                android:textSize="22sp"
                android:layout_toEndOf="@id/imageViewReport"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/data_report_EditText"
                android:layout_below="@id/conta_report_EditText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewReport"
                android:text="@string/data"
                android:textSize="14sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/consumo_anterior_EditText"
                android:layout_below="@id/data_report_EditText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewReport"
                android:text="@string/consumo_anterior"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/consumo_total_EditText"
                android:layout_below="@id/consumo_anterior_EditText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewReport"
                android:text="@string/consumo_total"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/valor_total_EditText"
                android:layout_below="@id/consumo_total_EditText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewReport"
                android:text="@string/valor_total"
                android:textSize="14sp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>